--- a/docs/blog/.authors.yml
+++ b/docs/blog/.authors.yml
@@ -2,5 +2,5 @@ authors:
   linkchen:
     name: Link Chen
     description: Author
-    avatar: https://github.com/HeroLink.png
-    url: https://github.com/HeroLink
+    avatar: https://github.com/linkch0.png
+    url: https://github.com/linkch0
