--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,12 +15,12 @@ jobs:
           SSH_PRIVATE_KEY: ${{ secrets.ID_RSA_GITEE }}
         with:
           source-repo: git@github.com:linkch0/linkch0.github.io.git
-          destination-repo: git@gitee.com:linkch/linkch.gitee.io.git
+          destination-repo: git@gitee.com:linkch/linkch.git
 
       - name: Build Gitee Pages
         uses: yanglbme/gitee-pages-action@main
         with:
           gitee-username: linkch
           gitee-password: ${{ secrets.GITEE_PASSWORD }}
-          gitee-repo: linkch/linkch.gitee.io.git
+          gitee-repo: linkch/linkch
           branch: gh-pages
