--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,19 +16,20 @@ jobs:
         run: |
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      - uses: actions/setup-python@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: 3.x
       - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV
-      - uses: actions/cache@v3
+      - uses: actions/cache@v4
         with:
           key: mkdocs-material-${{ env.cache_id }}
-          path: .cache
+          path: ~/.cache
           restore-keys: |
             mkdocs-material-
       - run: |
           pip install mkdocs-material \
           mkdocs-git-revision-date-localized-plugin \
           mkdocs-git-committers-plugin-2 \
-          mkdocs-glightbox
+          mkdocs-glightbox \
+          mkdocs-jupyter
       - run: mkdocs gh-deploy --force
