--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,9 +1,10 @@
 site_name: Link's GitHub Pages
+site_url: https://linkch0.github.io/
 site_description: Link's GitHub Pages
 repo_name: linkch0/linkch0.github.io
 repo_url: https://github.com/linkch0/linkch0.github.io
 edit_uri: edit/main/docs/
-copyright: Copyright &copy; 2019 - 2023 Link Chen
+copyright: Copyright &copy; 2019 - 2026 Link Chen
 
 theme:
   name: material
@@ -36,6 +37,8 @@ theme:
     - content.code.annotate
     - content.action.view
     - content.action.edit
+    # - toc.integrate
+    - toc.follow
   icon:
     logo: material/atom-variant
     repo: fontawesome/brands/github
@@ -54,6 +57,7 @@ plugins:
       repository: linkch0/linkch0.github.io
       branch: main
   - glightbox
+  - mkdocs-jupyter
 
 extra:
   social:
@@ -121,12 +125,14 @@ nav:
               - notes/utilities/Softwares.md
           - Techniques:
               - notes/techniques/BigData.md
+              - notes/techniques/Natural-Language-Processing.md
           - Languages:
               - notes/languages/C.md
               - notes/languages/Java.md
               - notes/languages/Python.md
               - notes/languages/Vocabulary.md
           - notes/Misc.md
+      - License: https://squidfunk.github.io/mkdocs-material/license/
   - Blog:
       - blog/index.md
   - Courses:
@@ -142,5 +148,12 @@ nav:
           - courses/CSAPP/lab.md
       - Operating Systems:
           - courses/OS_JYY/introduction.md
+      - Python:
+          - courses/PythonNB/numpy.ipynb
+          - courses/PythonNB/pandas.ipynb
+          - courses/PythonNB/matplotlib.ipynb
+          - courses/PythonNB/scikit-learn.ipynb
+          - courses/PythonNB/torch.ipynb
+          - courses/PythonNB/hugging-face.ipynb
   - Projects:
       - projects/index.md
